--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,23 +9,23 @@
     }
   ],
   "dependencies": {
-    "com.ptc.vuforia.engine": "9.0.12",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ide.rider": "1.1.4",
+    "com.unity.collab-proxy": "1.3.9",
+    "com.unity.ide.rider": "1.2.1",
+    "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.learn.iet-framework": "1.2.2",
     "com.unity.test-framework": "1.1.22",
-    "com.unity.textmeshpro": "2.1.1",
+    "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arcore": "2.1.14",
-    "com.unity.xr.arfoundation": "2.1.14",
-    "com.unity.xr.arkit": "2.1.14",
-    "com.unity.xr.magicleap": "4.1.3",
+    "com.unity.xr.arcore": "3.1.5",
+    "com.unity.xr.arfoundation": "3.1.3",
+    "com.unity.xr.arkit": "3.1.3",
+    "com.unity.xr.magicleap": "5.1.2",
     "com.unity.xr.management": "3.2.17",
     "com.unity.xr.mock-hmd": "1.2.0-preview.1",
     "com.unity.xr.oculus": "1.6.1",
-    "com.unity.xr.windowsmr": "2.6.0",
+    "com.unity.xr.windowsmr": "3.3.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
